--- a/RTMobile/RTMobile/insight/GeneralObjectInsight.xaml
+++ b/RTMobile/RTMobile/insight/GeneralObjectInsight.xaml
@@ -50,14 +50,14 @@
                     <ScrollView  x:Name="detailIssue" Grid.Row="1" Grid.Column="0" HorizontalOptions="FillAndExpand"
                                  VerticalOptions="FillAndExpand" Margin="0,0,10,0">
                         <ListView x:Name="InformationObject"  Grid.Row="1" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
-                                  HasUnevenRows="True" SeparatorVisibility="None" >
+                                  HasUnevenRows="True" SeparatorVisibility="None" ItemsSource="{Binding Insights} ">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
                                         <ViewCell.View>
                                             <Grid>
-                                                <Label Text="{Binding name}" Grid.Column="0"/>
-                                                <Label Text="{Binding value}" Grid.Column="1" HorizontalTextAlignment="End"/>
+                                                <Label Text="{Binding Path = ObjectTypeAttribute.Name}" Grid.Column="0"/>
+                                                <Label Text="{Binding Path = ObjectAttributeValues[0].DisplayValue}" Grid.Column="1" HorizontalTextAlignment="End"/>
                                             </Grid>
                                         </ViewCell.View>
                                     </ViewCell>
