--- a/RTMobile/RTMobile/issues/event/CreateIssue.xaml
+++ b/RTMobile/RTMobile/issues/event/CreateIssue.xaml
@@ -25,7 +25,7 @@
                     <BoxView HeightRequest="1" BackgroundColor="#F0F1F0" Grid.Row="1" IsVisible="False" x:Name="delimiter" HorizontalOptions="FillAndExpand"/>
                     <Button x:Name="extended_button" Text="Показать необязательные поля" Clicked="button_show_necessarily" VerticalOptions ="StartAndExpand"  Grid.Row ="2" BackgroundColor="Transparent"
                             TextColor="#F0F1F0" IsVisible="False" FontSize="16"/>
-                    <StackLayout IsVisible="False" x:Name="necessarily_fields" VerticalOptions="FillAndExpand" Grid.Row ="3">
+                    <StackLayout IsVisible="False" x:Name="necessarily_fields" VerticalOptions="FillAndExpand" Grid.Row ="3" Margin="20,10,20,0">
                     </StackLayout>
                 </Grid>
             </ScrollView>
