--- a/RTMobile/RTMobile/issues/AllIssuesView.xaml
+++ b/RTMobile/RTMobile/issues/AllIssuesView.xaml
@@ -44,7 +44,7 @@
                                         <RowDefinition Height="140"/>
                                     </Grid.RowDefinitions>
 
-                                    <Frame BackgroundColor="#94B66C" HasShadow="True" Padding="0"
+                                    <Frame BackgroundColor="{Binding Path= fields.status.statusCategory.colorJ}" HasShadow="True" Padding="0"
                                            Grid.Column="0" Grid.Row="0" CornerRadius="5" Margin="0,0,-4,0">
                                         <StackLayout Orientation="Horizontal">
                                             <BoxView HorizontalOptions="Center" VerticalOptions="Center"
