--- a/RTMobile/RTMobile/about/About.xaml
+++ b/RTMobile/RTMobile/about/About.xaml
@@ -9,31 +9,34 @@
             <ScrollView>
                 <StackLayout>
                     <Image Source="rosohranaLogo.png" HorizontalOptions="CenterAndExpand"
-                   VerticalOptions="Start"  Aspect="Fill" Margin="0,40,0,0"/>
+                           VerticalOptions="Start"  Aspect="Fill" Margin="0,40,0,0"/>
                     <Label x:Name="versionApp" Text="Версия 1.0.0" HorizontalOptions="CenterAndExpand" VerticalOptions="Start"
-                   FontSize="16" TextColor="#F0F1F0" Margin="0,10,0,25"/>
+                           FontSize="16" TextColor="#F0F1F0" Margin="0,10,0,25"/>
                     <Grid VerticalOptions="StartAndExpand" BackgroundColor="#4A4C50">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height = "60"/>
                             <RowDefinition Height="auto"/>
-                            <RowDefinition Height="1"/>
-                            <RowDefinition Height="60"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="40"/>
                         </Grid.ColumnDefinitions>
                         <Button Text="Обратная связь" Grid.Row="0" Grid.Column="0"
-                        VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
-                        TextColor="#F0F1F0" BackgroundColor="Transparent" Clicked="Feedback_clicked"/>
-                        <Image x:Name="arroW" Source="arrowRight.png" Grid.Row="0" Grid.Column="1" HorizontalOptions="End"/>
-
-                        <Frame BackgroundColor="Transparent" CornerRadius="5" HorizontalOptions="FillAndExpand" Grid.Row="1" Grid.Column="0" IsVisible="false" Grid.ColumnSpan="2" x:Name="fb">
-                            
+                                VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
+                                TextColor="#F0F1F0" BackgroundColor="Transparent" Clicked="Feedback_clicked"/>
+                        <Image x:Name="arroW" Source="arrowDown.png" Grid.Row="0" Grid.Column="1" HorizontalOptions="End" Margin="0,0,10,0" WidthRequest="20">
+                            <Image.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="Feedback_clicked"/>
+                            </Image.GestureRecognizers>
+                        </Image>
+                        <BoxView BackgroundColor="#9B9CA0" HeightRequest="1"
+                                 HorizontalOptions="FillAndExpand"
+                                 Grid.Row="1" Grid.ColumnSpan="2"/>
+                        <Frame BackgroundColor="Transparent" CornerRadius="5" HorizontalOptions="FillAndExpand" Grid.Row="2" Grid.Column="0" IsVisible="false" Grid.ColumnSpan="2" x:Name="fb">                            
                             <ScrollView>
                                 <StackLayout x:Name="FeedbackForm" HorizontalOptions="FillAndExpand">
-                                    <BoxView BackgroundColor="#9B9CA0" HeightRequest="1"
-                                     HorizontalOptions="FillAndExpand" />
 
                                     <Label Text="Тема:" TextColor="White" Margin="3,10,10,0" FontSize="18"/>
                                     <Entry x:Name="FBHead" TextColor="White" Placeholder="Введите тему" MaxLength="100" PlaceholderColor="White" FontSize="18" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Start"/>
@@ -41,19 +44,17 @@
                                     <Label Text="Сообщение:" Margin="3,10,10,0" TextColor="White" FontSize="18" />
                                     <Editor x:Name ="FBBody" Placeholder="Введите текст" PlaceholderColor="White" FontSize="18" AutoSize="TextChanges" TextColor="White" MaxLength="500" HorizontalOptions="FillAndExpand"/>
 
-                                    <Button Clicked="FeedbacSender_clicked" BackgroundColor="#BE0030"  Text ="Отправить" TextColor="White" Margin="10,10,10,10" FontSize="18" />
+                                    <Button Clicked="FeedbacSender_clicked" BackgroundColor="#BE0030"  Text ="Отправить" TextColor="White" Margin="10,10,10,10" FontSize="18" CornerRadius="5" />                                    
                                 </StackLayout>
                             </ScrollView>
                         </Frame>
-
-
                         <BoxView BackgroundColor="#9B9CA0" HeightRequest="1"
-                                 HorizontalOptions="FillAndExpand"
-                                 Grid.Row="2" Grid.ColumnSpan="2"/>
-                        <Button Text="Оценить приложение" Grid.Row="3" Grid.Column="0"
+                                 HorizontalOptions="FillAndExpand" x:Name="boxViewSeparator"
+                                 Grid.Row="3" Grid.ColumnSpan="2" IsVisible="false"/>
+                        <Button Text="Оценить приложение" Grid.Row="4" Grid.Column="0"
                         TextColor="#F0F1F0"  HorizontalOptions="FillAndExpand"
                         VerticalOptions="FillAndExpand" BackgroundColor="Transparent"/>
-                        <Image Source="arrowRight.png" Grid.Row="3" Grid.Column="1"/>
+                        <Image Source="arrowDown.png" Grid.Row="4" Grid.Column="1" HorizontalOptions="End" Margin="0,0,10,0" WidthRequest="20"/>
                     </Grid>
             
                 </StackLayout>
