--- a/RTMobile/RTMobile/issues/AllIssuesView.xaml
+++ b/RTMobile/RTMobile/issues/AllIssuesView.xaml
@@ -60,7 +60,7 @@
                                            Grid.Column="1" Grid.Row="0" CornerRadius="5">
                                         <Grid HorizontalOptions="FillAndExpand">
                                             <Label Text="{Binding Path=fields.summary}" TextColor="#000000"
-                                                   FontSize="14" FontAttributes ="Bold" MaxLines="1" LineBreakMode="TailTruncation"
+                                                   FontSize="13" FontAttributes ="Bold" MaxLines="1" LineBreakMode="TailTruncation"
                                                    Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Margin="0,-5,0,0"
                                                    HorizontalOptions="StartAndExpand"/>
 
@@ -75,7 +75,7 @@
                                                     <ColumnDefinition Width="20"/>
                                                 </Grid.ColumnDefinitions>
                                                 <Label Text="{Binding Path=fields.issuetype.name}" FontAttributes="Bold"
-                                                   FontSize="12" TextColor="#94B66C" Grid.Column="0" Padding="10,0,0,-5" 
+                                                   FontSize="13" Grid.Column="0" Padding="10,0,0,-5" 
                                                    Grid.Row="0" Margin="-10,0,0,0" Grid.ColumnSpan="2" HorizontalOptions="Fill" />
                                                 <!--<Image Source="comment.png" Grid.Column="1" VerticalOptions="End"
                                                    Grid.Row="0" Margin="0,0,-10,0" HorizontalOptions="End"/>
@@ -93,12 +93,12 @@
                                                 <Image Source="person.png" Grid.Column="0" VerticalOptions="Start"
                                                    Grid.Row="0" HorizontalOptions="Start" Margin="0,0,0,0" />
                                                 <Label Text="{Binding Path=fields.assignee.displayName}" TextColor="#000000"
-                                                   FontSize="14" Grid.Row="0"  Grid.Column="1"
+                                                   FontSize="13" Grid.Row="0"  Grid.Column="1"
                                                    HorizontalOptions="Fill" Margin="0,-3,0,0" />
                                                 <Image Source="timeStart.png" Grid.Column="2" VerticalOptions="Start"
                                                    Grid.Row="0" HorizontalOptions="End" />
                                                 <Label Text="{Binding Path=fields.created}" TextColor="#000000"
-                                                   FontSize="14" Grid.Row="0"
+                                                   FontSize="13" Grid.Row="0"
                                                    Grid.Column="3" HorizontalOptions="End" Margin="0,-3,0,0" />
                                             </Grid>
 
@@ -108,13 +108,13 @@
                                                     <ColumnDefinition Width="Auto"/>
                                                     <ColumnDefinition Width="Auto"/>
                                                 </Grid.ColumnDefinitions>
-                                                <Label Text="{Binding Path=fields.status.name}" TextColor="#000000"
-                                                   FontSize="14" Grid.Row="0"  Grid.Column="0"
+                                                <Label Text="{Binding Path=fields.status.name}" TextColor="{Binding Path= fields.status.statusCategory.colorJ}" 
+                                                   FontSize="13" Grid.Row="0"  Grid.Column="0"
                                                    HorizontalOptions="StartAndExpand" Margin="0,-6,0,0" />
                                                 <Image x:Name="resolutionImg" Source="timeUpdate.png" Grid.Column="1" VerticalOptions="Start"
                                                    Grid.Row="0" HorizontalOptions="End" />
                                                 <Label x:Name="resolution" Text="{Binding Path=fields.resolutiondate}" TextColor="#000000"
-                                                   FontSize="14" Grid.Row="0"
+                                                   FontSize="13" Grid.Row="0"
                                                    Grid.Column="2" HorizontalOptions="End" Margin="0,-3,0,0" />
                                             </Grid>
                                         </Grid>
