--- a/RTMobile/RTMobile/insight/LinkObjectInsight.xaml
+++ b/RTMobile/RTMobile/insight/LinkObjectInsight.xaml
@@ -6,9 +6,38 @@
              mc:Ignorable="d"
              Title="ССЫЛКИ"
              x:Class="RTMobile.insight.LinkObjectInsight">
+
     <ContentPage.Content>
         <StackLayout BackgroundColor="#4A4C50" VerticalOptions="Start"  Orientation="Horizontal">
-         
+            <Frame  HasShadow="True" CornerRadius="5" BackgroundColor="#FFFFFF" Margin="10,20,10,10" Padding="10,0,10,0">
+                <StackLayout>
+                    <StackLayout Orientation="Horizontal" Margin="0,10,0,0">
+                        <Label Text="Ссылки" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+                    </StackLayout>
+                    <BoxView BackgroundColor ="#312F35" HeightRequest="1" Margin="0,0,0,0" />
+                    <ScrollView>
+                        <ListView ItemsSource="{Binding Selectedobject}" ItemTapped="ListView_ItemTapped" HasUnevenRows="True" >
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <ViewCell>
+                                        <StackLayout Orientation="Horizontal" Margin="0,10,0,10">
+                                            <Label HorizontalOptions="StartAndExpand" MaxLines="1">
+                                                <Label.FormattedText>
+                                                    <FormattedString>
+                                                        <Span Text="{Binding name}"/>
+                                                        <Span Text=" - "/>
+                                                        <Span Text="{Binding Path= objectType.name}"/>
+                                                    </FormattedString>
+                                                </Label.FormattedText>
+                                            </Label>
+                                        </StackLayout>
+                                    </ViewCell>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </ScrollView>
+                </StackLayout>
+            </Frame>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
