--- a/RTMobile/RTMobile/insight/objectList.xaml
+++ b/RTMobile/RTMobile/insight/objectList.xaml
@@ -20,7 +20,7 @@
             <ScrollView BackgroundColor="#4A4C50" VerticalOptions="FillAndExpand">
                 <ListView  Grid.Row="1" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" 
                                    HasUnevenRows="True" SeparatorColor="#9B9CA0"
-                                   ItemsSource="{Binding insightObject}" ItemTapped="OpenField" >
+                                   ItemsSource="{Binding InsightProjectStuff}" ItemTapped="OpenField" >
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
